@@ -20,7 +20,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation("com.mysql:mysql-connector-j:9.2.0")
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -31,8 +31,16 @@ dependencies {
 
 	testCompileOnly("org.projectlombok:lombok:1.18.38")
 	testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
+
+	testImplementation 'org.mockito:mockito-inline:5.2.0' // 버전은 상황에 맞게
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
 }
+
+test {
+	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+}
+
